// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FFNewSubscription dropdown 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-right-xlarge"
      style="width: 50%;"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
      >
        authSettings.costCalculator.developerLicenses
      </p>
      <div
        class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
      >
        <div
          class="bp3-slider slider"
        >
          <div
            class="bp3-slider-track"
          >
            <div
              class="bp3-slider-progress"
              style="left: 0.00%; right: 100.00%; top: 0px;"
            />
            <div
              class="bp3-slider-progress bp3-intent-primary"
              style="left: 0.00%; right: 60.00%; top: 0px;"
            />
            <div
              class="bp3-slider-progress"
              style="left: 40.00%; right: 0.00%; top: 0px;"
            />
          </div>
          <div
            class="bp3-slider-axis"
          >
            <div
              class="bp3-slider-label"
              style="left: 0.00%;"
            >
              0
            </div>
            <div
              class="bp3-slider-label"
              style="left: 20.00%;"
            >
              10
            </div>
            <div
              class="bp3-slider-label"
              style="left: 40.00%;"
            >
              20
            </div>
            <div
              class="bp3-slider-label"
              style="left: 60.00%;"
            >
              30
            </div>
            <div
              class="bp3-slider-label"
              style="left: 80.00%;"
            >
              40
            </div>
            <div
              class="bp3-slider-label"
              style="left: 100.00%;"
            >
              50
            </div>
          </div>
          <span
            class="bp3-slider-handle"
            style="left: calc(40.00% - 0px);"
            tabindex="0"
          >
            <span
              class="bp3-slider-label"
            >
              20
            </span>
          </span>
        </div>
        <div
          class="TextInput--main"
        >
          <div
            class="bp3-input-group textInput"
          >
            <input
              class="bp3-input"
              type="text"
              value="20"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-right-xlarge"
      style="width: 50%;"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline StyledProps--flex-justifyContent-start"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
        >
          authSettings.costCalculator.maus
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          , 
          100
          K
           
          authSettings.costCalculator.increments
        </p>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
      >
        <div
          class="bp3-slider slider"
        >
          <div
            class="bp3-slider-track"
          >
            <div
              class="bp3-slider-progress"
              style="left: 0.00%; right: 100.00%; top: 0px;"
            />
            <div
              class="bp3-slider-progress bp3-intent-primary"
              style="left: 0.00%; right: 80.00%; top: 0px;"
            />
            <div
              class="bp3-slider-progress"
              style="left: 20.00%; right: 0.00%; top: 0px;"
            />
          </div>
          <div
            class="bp3-slider-axis"
          >
            <div
              class="bp3-slider-label"
              style="left: 0.00%;"
            >
              0
            </div>
            <div
              class="bp3-slider-label"
              style="left: 20.00%;"
            >
              100
            </div>
            <div
              class="bp3-slider-label"
              style="left: 40.00%;"
            >
              200
            </div>
            <div
              class="bp3-slider-label"
              style="left: 60.00%;"
            >
              300
            </div>
            <div
              class="bp3-slider-label"
              style="left: 80.00%;"
            >
              400
            </div>
            <div
              class="bp3-slider-label"
              style="left: 100.00%;"
            >
              500
            </div>
          </div>
          <span
            class="bp3-slider-handle"
            style="left: calc(20.00% - 0px);"
            tabindex="0"
          >
            <span
              class="bp3-slider-label"
            >
              100
            </span>
          </span>
        </div>
        <div
          class="bp3-popover-wrapper DropDown--main dropdown"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class=""
            >
              <div
                class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder StyledProps--flex"
                data-testid="slider-dropdown"
                style="width: 70px;"
              >
                <div
                  class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                    data-testid="dropdown-value"
                    style="--text-line-clamp: 1;"
                  >
                    100K
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                    data-icon="main-chevron-down"
                  >
                    <svg
                      height="8"
                      viewBox="0 0 14 8"
                      width="8"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                        fill="#4d5969"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bp3-overlay bp3-overlay-inline"
          >
            <div
              class="bp3-transition-container bp3-popover-exit bp3-popover-exit-active"
              style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
            >
              <div
                class="bp3-popover bp3-minimal bp3-select-popover DropDown--popover"
              >
                <div
                  class="bp3-popover-content"
                >
                  <div>
                    <ul
                      class="bp3-menu"
                    >
                      <li
                        class="DropDown--menuItem DropDown--active"
                      >
                        100K
                      </li>
                      <li
                        class="DropDown--menuItem"
                      >
                        200K
                      </li>
                      <li
                        class="DropDown--menuItem"
                      >
                        300K
                      </li>
                      <li
                        class="DropDown--menuItem"
                      >
                        400K
                      </li>
                      <li
                        class="DropDown--menuItem"
                      >
                        500K
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FFNewSubscription error 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
    style="width: 300px;"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
      style="width: 100%; height: 100%;"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
        style="align-items: center; width: 500px;"
      >
        <span
          class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500"
          icon="error"
        >
          <svg
            data-icon="error"
            height="32"
            viewBox="0 0 20 20"
            width="32"
          >
            <desc>
              error
            </desc>
            <path
              d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-align-center StyledProps--color StyledProps--color-red500"
        >
          error
        </p>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Retry
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FFNewSubscription loading 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main spinner"
  >
    <div
      class="StyledProps--font StyledProps--main PageSpinner--spinner StyledProps--flex StyledProps--flex-align-center-center"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main PageSpinner--content"
        style="align-items: center; width: 500px;"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600"
          data-icon="steps-spinner"
        >
          <svg
            height="32"
            viewBox="0 0 128 128"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                fill="#ff8e02"
              />
              <path
                d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                fill="#ffddb3"
                fill-opacity="0.3"
              />
              <path
                d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                fill="#ffd29a"
                fill-opacity="0.4"
              />
              <path
                d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                fill="#ffc680"
                fill-opacity="0.5"
              />
              <path
                d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                fill="#ffbb67"
                fill-opacity="0.6"
              />
              <path
                d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                fill="#ffb04d"
                fill-opacity="0.7"
              />
              <path
                d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                fill="#ffa535"
                fill-opacity="0.8"
              />
              <path
                d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                fill="#ff991b"
                fill-opacity="0.9"
              />
              <animatetransform
                attributeName="transform"
                calcMode="discrete"
                dur="1200ms"
                repeatCount="indefinite"
                type="rotate"
                values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
              />
            </g>
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
        >
          Loading, please wait...
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`FFNewSubscription update licenses 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-right-xlarge"
      style="width: 50%;"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
      >
        authSettings.costCalculator.developerLicenses
      </p>
      <div
        class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
      >
        <div
          class="bp3-slider slider"
        >
          <div
            class="bp3-slider-track"
          >
            <div
              class="bp3-slider-progress"
              style="left: 0.00%; right: 100.00%; top: 0px;"
            />
            <div
              class="bp3-slider-progress bp3-intent-primary"
              style="left: 0.00%; right: 30.00%; top: 0px;"
            />
            <div
              class="bp3-slider-progress"
              style="left: 70.00%; right: 0.00%; top: 0px;"
            />
          </div>
          <div
            class="bp3-slider-axis"
          >
            <div
              class="bp3-slider-label"
              style="left: 0.00%;"
            >
              0
            </div>
            <div
              class="bp3-slider-label"
              style="left: 20.00%;"
            >
              10
            </div>
            <div
              class="bp3-slider-label"
              style="left: 40.00%;"
            >
              20
            </div>
            <div
              class="bp3-slider-label"
              style="left: 60.00%;"
            >
              30
            </div>
            <div
              class="bp3-slider-label"
              style="left: 80.00%;"
            >
              40
            </div>
            <div
              class="bp3-slider-label"
              style="left: 100.00%;"
            >
              50
            </div>
          </div>
          <span
            class="bp3-slider-handle"
            style="left: calc(70.00% - 0px);"
            tabindex="0"
          >
            <span
              class="bp3-slider-label"
            >
              35
            </span>
          </span>
        </div>
        <div
          class="TextInput--main"
        >
          <div
            class="bp3-input-group textInput"
          >
            <input
              class="bp3-input"
              type="text"
              value="35"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-right-xlarge"
      style="width: 50%;"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline StyledProps--flex-justifyContent-start"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
        >
          authSettings.costCalculator.maus
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          , 
          100
          K
           
          authSettings.costCalculator.increments
        </p>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
      >
        <div
          class="bp3-slider slider"
        >
          <div
            class="bp3-slider-track"
          >
            <div
              class="bp3-slider-progress"
              style="left: 0.00%; right: 100.00%; top: 0px;"
            />
            <div
              class="bp3-slider-progress bp3-intent-primary"
              style="left: 0.00%; right: 0.00%; top: 0px;"
            />
            <div
              class="bp3-slider-progress"
              style="left: 100.00%; right: 0.00%; top: 0px;"
            />
          </div>
          <div
            class="bp3-slider-axis"
          >
            <div
              class="bp3-slider-label"
              style="left: 0.00%;"
            >
              0
            </div>
            <div
              class="bp3-slider-label"
              style="left: 20.00%;"
            >
              100
            </div>
            <div
              class="bp3-slider-label"
              style="left: 40.00%;"
            >
              200
            </div>
            <div
              class="bp3-slider-label"
              style="left: 60.00%;"
            >
              300
            </div>
            <div
              class="bp3-slider-label"
              style="left: 80.00%;"
            >
              400
            </div>
            <div
              class="bp3-slider-label"
              style="left: 100.00%;"
            >
              500
            </div>
          </div>
          <span
            class="bp3-slider-handle"
            style="left: calc(2000.00% - 0px);"
            tabindex="0"
          >
            <span
              class="bp3-slider-label"
            >
              10000
            </span>
          </span>
        </div>
        <div
          class="bp3-popover-wrapper DropDown--main dropdown"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class=""
            >
              <div
                class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder StyledProps--flex"
                data-testid="slider-dropdown"
                style="width: 70px;"
              >
                <div
                  class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                    data-testid="dropdown-value"
                    style="--text-line-clamp: 1;"
                  >
                      K
                  </p>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                    data-icon="main-chevron-down"
                  >
                    <svg
                      height="8"
                      viewBox="0 0 14 8"
                      width="8"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                        fill="#4d5969"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
